# crew-action-2026-03

./: README.md
projectmind-api/: .env.example  .gitignore  README.md  requirements.txt
projectmind-api/app/: __init__.py  config.py  main.py
projectmind-api/app/agents/: crew_manager.py  llm_config.py
projectmind-api/app/agents/definitions/: blocker_agent.py  budget_agent.py  (+11 more)
projectmind-api/app/api/: deps.py
projectmind-api/app/db/: __init__.py  supabase_client.py
projectmind-api/app/models/: __init__.py  agent_run.py  chat_message.py  custom_agent.py  dashboard.py  ingestion.py  project.py
projectmind-api/app/services/: __init__.py  dashboard_service.py  embedding_service.py  ingestion_service.py  mcp_service.py
projectmind-api/scripts/: run_crew_test.py
projectmind-api/tests/: test_health.py
projectmind-front/: .env.example  README.md  index.html
projectmind-front/src/app/: App.tsx  routes.tsx
projectmind-front/src/imports/: projectmind-mvp-design.md
projectmind-front/src/styles/: tailwind.css  theme.css
unimed_comprehensive_competitive_intelligence_monitor_crew_studio/: .env.example  .env_exemplo  .gitignore  README.md  pyproject.toml
unimed_comprehensive_competitive_intelligence_monitor_crew_studio/knowledge/: user_preference.txt
unimed_comprehensive_competitive_intelligence_monitor_crew_studio/src/unimed_comprehensive_competitive_intelligence_monitor/: crew.py  main.py
unimed_comprehensive_competitive_intelligence_monitor_crew_studio/src/unimed_comprehensive_competitive_intelligence_monitor/config/: agents.yaml  tasks.yaml
(+33 files in other folders)
